style: overflow-y fixed

--- a/src/app/Pages/home/home.component.sass
+++ b/src/app/Pages/home/home.component.sass
@@ -2,7 +2,7 @@
     width: 100vw
     height: 100vh
     padding: 1rem
-    overflow: hidden
+    overflow-x: hidden
 
     display: flex
     flex-direction: column
